# yani

./: .gitignore  CONTEXT.md  main.py  pyproject.toml  tunnel.py  tunnel.sh
docs/adr/: 0001-per-request-cookie-identity.md  0002-per-learner-file-locking.md
src/yani/: agent_prompts.py  cli.py  harness.py  lesson_blocks.py  lesson_store.py  llm.py  observability.py  server.py  session.py  skill_registry.py  state.py  surface_store.py  users.py  workspace.py
src/yani/agents/block-composer/: AGENT.md
src/yani/agents/lesson-planner/: AGENT.md
src/yani/agents/ui-composer/: AGENT.md
src/yani/agents/ui-data-writer/: AGENT.md
src/yani/agents/ui-designer/: AGENT.md
src/yani/prompts/: system_prompt.md  system_prompt_V0.md
src/yani/skills/mentor/: SKILL.md
src/yani/skills/ui-builder/: SKILL.md
src/yani/static/: app.js  catalog.js  index.html  markdown.js  mentor-blocks.css  sketch.js  style.css  typeset.js  ui.js
src/yani/static/catalogs/: base.css
src/yani/tools/: __init__.py  lesson.py  registry.py  skill.py  ui.py  weather.py
src/yani/ui_catalog/: __init__.py  base.py
src/yani/ui_catalog/AudioPlayer/: SKILL.md  schema.py
src/yani/ui_catalog/Button/: SKILL.md  schema.py
src/yani/ui_catalog/Card/: SKILL.md  schema.py
src/yani/ui_catalog/CheckBox/: SKILL.md  schema.py
src/yani/ui_catalog/ChipRow/: SKILL.md  schema.py
src/yani/ui_catalog/ChoicePicker/: SKILL.md  schema.py
src/yani/ui_catalog/CodeBlock/: SKILL.md  schema.py
src/yani/ui_catalog/Column/: SKILL.md  schema.py
src/yani/ui_catalog/DataTable/: SKILL.md  schema.py
(+118 files in other folders)
